tests/neg/Lib.hs
module Lib (foo) where

foo a = a
